2006-04-24	Benedikt Meurer <benny@xfce.org>

	* NEWS: Update version.
	* THANKS: Add translator credits for the catalan translators.

2006-04-23	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences-dialog.c
	  (terminal_preferences_dialog_init): Use "Close" label instead of
	  "Cancel". Bug #1714.

2006-04-18	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c(terminal_window_action_about): Use
	  GPL license text provided by libxfce4util.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* === Released 0.2.5.1beta1 ===
	* NEWS, configure.in.in: Bump version.
	* Terminal.spec.in: Update RPM spec file.
	* configure.in.in: Depend on libexo 0.3.16beta1.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* po/Terminal.pot, po/*.po: Updated.
	* po/de.po: Update german translations.
	* po-doc/ja.po, doc/ja/Terminal.xml.in: Updated.
	* THANKS: Add translator credits for Andrey
	  Fedoseev <andrey.fedoseev@gmail.com>.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* NEWS: Update NEWS.
	* doc/C/Terminal.xml.in: Update documentation date.

2006-04-15	Benedikt Meurer <benny@xfce.org>

	* icons/: stock/generic is no longer present in the hicolor icon theme.
	  Use stock/navigation instead.
	* terminal/terminal-preferences-dialog.c
	  (terminal_preferences_dialog_init): Allow to close the preferences
	  dialog using Escape.

2006-04-09	Benedikt Meurer <benny@xfce.org>

	* icons/Makefile.am: Be sure to run gtk-update-icon-cache after
	  installing new icons into the hicolor icon theme (skipped if $DESTDIR
	  is set).

2006-03-12	Benedikt Meurer <benny@xfce.org>

	* po-doc/, Makefile.am, configure.in.in: Apply Daichi's patch to enable
	  translation of the user manual through .po files, using xml2po.

2006-03-11	Benedikt Meurer <benny@xfce.org>

	* helpers/sylpheed-claws.desktop.in: Fix typo.

2006-03-11	Benedikt Meurer <benny@xfce.org>
