@@ -1,7 +1,11 @@
 # $Id$
 
-iconsdir = $(datadir)/icons/hicolor/48x48/stock/navigation
-icons_DATA =								\
+appsdir = $(datadir)/icons/hicolor/48x48/apps
+apps_DATA =								\
+	Terminal.png
+
+stockdir = $(datadir)/icons/hicolor/48x48/stock/navigation
+stock_DATA =								\
 	stock_terminal-advanced.png					\
 	stock_terminal-appearance.png					\
 	stock_terminal-colors.png					\
@@ -12,6 +16,7 @@ icons_DATA =								\
 	stock_terminal-webbrowser.png
 
 EXTRA_DIST =								\
-	$(icons_DATA)
+	$(apps_DATA)							\
+	$(stock_DATA)
 
 # vi:set ts=8 sw=8 noet ai nocindent:
