@@ -1,3 +1,8 @@
+2006-05-01	Benedikt Meurer <benny@xfce.org>
+
+	* icons/48x48/Makefile.am: Properly install Terminal.png into the
+	  hicolor icon theme. Bug #1748.
+
 2006-04-24	Benedikt Meurer <benny@xfce.org>
 
 	* NEWS: Update version.
